feat: add scroll interaction sections and layout structure

--- a/index.html
+++ b/index.html
@@ -59,6 +59,93 @@
           <a href="#">구입하기</a>
         </div>
       </nav>
+
+      <section
+        class="scroll-section"
+        id="scroll-section-0"
+      >
+        <h1>AirMug Pro</h1>
+        <div class="sticky-elem main-message">
+          <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>주변 맛을 느끼게 해주는<br />주변 맛 허용 모드</p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>온종일 편안한<br />맞춤형 손잡이</p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>새롭게 입가를<br />찾아온 매혹</p>
+        </div>
+      </section>
+      <section
+        class="scroll-section"
+        id="scroll-section-1"
+      >
+        <p>
+          <strong>보통 스크롤 영역</strong> Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Molestias, aperiam iusto. Fugit corrupti
+          ipsa veritatis aliquam quod pariatur natus perspiciatis voluptatem
+          dolore excepturi nostrum explicabo cupiditate, laborum reiciendis ab
+          fugiat blanditiis possimus neque rem sunt quas repellat cum. Quisquam
+          perspiciatis aperiam iure quidem tenetur provident quas voluptate sunt
+          qui quos earum aliquid accusantium eius voluptates dignissimos nihil
+          ex necessitatibus, quis tempora cum reiciendis. Blanditiis, cupiditate
+          distinctio, quaerat eligendi quos animi adipisci eveniet possimus
+          exercitationem, ut atque. Nemo dicta vero illo hic facere. Doloribus
+          fugiat omnis voluptate eligendi. Nam dicta ex nulla minima blanditiis
+          tempore laudantium illum, maxime placeat rerum laboriosam ducimus
+          consequatur veritatis eligendi in mollitia expedita sapiente at
+          necessitatibus. Inventore tempora tempore modi iusto, cupiditate sint
+          nostrum impedit alias cumque, necessitatibus nihil debitis, quae nobis
+          quidem? Molestias similique temporibus quas expedita ipsam rem dolore,
+          nulla hic iste ullam, voluptates a architecto. Eaque hic officiis
+          accusamus magni delectus aspernatur, blanditiis dolore sunt debitis
+          neque modi ullam dolores inventore adipisci omnis perspiciatis
+          corrupti aliquam veniam eligendi esse tenetur. Asperiores maxime ipsa
+          consequuntur quis? Inventore aliquam deserunt consectetur esse?
+          Asperiores quidem ducimus magnam ad? Hic unde nemo cumque? Commodi
+          maiores excepturi aut sit obcaecati quaerat, ut odit distinctio
+          mollitia perferendis. Fuga, cum.
+        </p>
+      </section>
+      <section
+        class="scroll-section"
+        id="scroll-section-2"
+      >
+        <div class="sticky-elem main-message">
+          <p><small>편안한 촉감</small><br />입과 하나 되다</p>
+        </div>
+        <div class="sticky-elem desc-message">
+          <p>
+            편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를
+            하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그,
+            AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고
+            오롯이 당신과 음료만 남게 되죠.
+          </p>
+          <div class="pin"></div>
+        </div>
+        <div class="sticky-elem desc-message">
+          <p>디자인 앤 퀄리티 오브 스웨덴,<br />메이드 인 차이나</p>
+          <div class="pin"></div>
+        </div>
+      </section>
+      <section
+        class="scroll-section"
+        id="scroll-section-3"
+      >
+        <p class="mid-message">
+          <strong>Retina 머그</strong> <br />아이디어를 광할하게 펼칠<br />아름답고
+          부드러운 음료 공간.
+        </p>
+        <p class="canvas-caption">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum est
+          voluptas assumenda dignissimos at, eum, enim architecto obcaecati qui
+          laudantium voluptatem molestiae maxime optio dolore quod. Molestias
+          saepe nihil fuga!
+        </p>
+      </section>
+      <footer class="footer">2025,11 인터랙션</footer>
     </div>
   </body>
 </html>
