style: add initial CSS setup excluding interaction styling

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         class="scroll-section"
         id="scroll-section-1"
       >
-        <p>
+        <p class="description">
           <strong>보통 스크롤 영역</strong> Lorem ipsum, dolor sit amet
           consectetur adipisicing elit. Molestias, aperiam iusto. Fugit corrupti
           ipsa veritatis aliquam quod pariatur natus perspiciatis voluptatem
@@ -114,7 +114,7 @@
         id="scroll-section-2"
       >
         <div class="sticky-elem main-message">
-          <p><small>편안한 촉감</small><br />입과 하나 되다</p>
+          <p><small>편안한 촉감</small>입과 하나 되다</p>
         </div>
         <div class="sticky-elem desc-message">
           <p>
@@ -139,10 +139,30 @@
           부드러운 음료 공간.
         </p>
         <p class="canvas-caption">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum est
-          voluptas assumenda dignissimos at, eum, enim architecto obcaecati qui
-          laudantium voluptatem molestiae maxime optio dolore quod. Molestias
-          saepe nihil fuga!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores,
+          ullam. Cumque aliquid nobis ipsa incidunt adipisci sed quod ipsum
+          minus eum velit. Earum, nostrum tempore at numquam molestias facere id
+          nulla mollitia ad, voluptatibus accusantium eveniet, inventore
+          expedita excepturi quidem. Incidunt corporis id veniam accusamus
+          ratione mollitia est enim nihil nostrum tenetur qui voluptas,
+          exercitationem doloremque architecto eum cumque. Dignissimos id nemo
+          perferendis quae officia, error laboriosam illum voluptatum qui
+          debitis atque dolorum voluptatem blanditiis ratione! Laudantium quis
+          iste distinctio odit tempora fugiat et fuga, labore autem expedita
+          suscipit saepe voluptates ea quibusdam possimus, omnis accusantium
+          consequuntur assumenda similique eos dolorum corporis? Necessitatibus
+          dolorum eveniet accusantium quaerat praesentium impedit, dolores non
+          tempora sapiente inventore eum minima quas hic voluptatibus enim
+          dolorem nesciunt cupiditate. Commodi, quibusdam recusandae! Natus
+          officia cumque ut? Doloremque temporibus voluptate laudantium. Quos
+          iusto distinctio sed, voluptatum consequuntur esse aperiam eligendi
+          adipisci minima. Incidunt nisi recusandae ad quas est minima ipsum. Ad
+          recusandae ipsam dolorem accusantium quas porro fuga vitae incidunt
+          enim mollitia exercitationem iure perspiciatis, molestiae error?
+          Quidem voluptates perferendis laudantium sunt quam repellat? Ea libero
+          deserunt officiis debitis exercitationem neque at, omnis eveniet,
+          dolore quo tempora delectus aliquam quaerat soluta voluptates. Optio
+          id temporibus ipsum sed?
         </p>
       </section>
       <footer class="footer">2025,11 인터랙션</footer>
